# text-label

./: README.md  pyproject.toml
tests/: statechart.py  test_exporters_text_directory.py  test_history.py  test_project.py  test_statechart.py
tests/assets/: test.json.tl  test.text-label-project
text_label/: bus.py  gui.py  history.py  main.py  project.py  statechart.py  text_info.py
text_label/exporters/: text_directory.py
